force-app/main/default/objects/Learner_Funding__c/Learner_Funding__c.object-meta.xml
<CustomObject>
    <label>Learner Funding</label>
    <nameField>
        <displayFormat>LFUN-{0000}</displayFormat>
        <label>Learner Funding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learner Fundings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>