force-app/main/default/objects/Learner_Funding__c/fields/Course_Registration__c.field-meta.xml
<CustomField>
    <fullName>Course_Registration__c</fullName>
    <label>Course Registration</label>
    <referenceTo>Course_Registration__c</referenceTo>
    <relationshipLabel>Learner Fundings</relationshipLabel>
    <relationshipName>Learner_Fundings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>