force-app/main/default/objects/Learner_Funding__c/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <description>MVP 1.0 On selecting Skills Future Credit, you are confirming to be a Singapore Citizen who has attained 25 Years of age.</description>
    <inlineHelpText>On selecting Skills Future Credit, you are confirming to be a Singapore Citizen who has attained 25 Years of age.</inlineHelpText>
    <label>Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Funding</valueSetName>
    </valueSet>
</CustomField>