force-app/main/default/objects/Learner_Funding__c/validationRules/AmountValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>AmountValidation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Course_Registration__r.Course_Run_Id__r.CourseRecordType__c == &apos;Funded_Course&apos;,  Amount__c  &gt;  Course_Registration__r.Course_Run_Id__r.CourseFee__c, 
Amount__c  &gt;  Course_Registration__r.Course_Run_Id__r.CourseFee__c)</errorConditionFormula>
    <errorMessage>Amount should not be greater than Full fee for the Funded Course, Amount should not be greater than Non Member Fee for the Non Funded course</errorMessage>
</ValidationRule>